[tool.poetry]
name = "python-init"
version = "0.1.0"
description = ""
authors = ["tanar <takujump@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"